tests and Swagger docs
Integrated Swagger/OpenAPI documentation
- Configured Spring Security with JWT filter
Integrated Swagger/OpenAPI documentation
- Configured Spring Security with JWT filter
Created secured endpoints (/user/me, /admin/panel, /users)